--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -46,16 +46,26 @@ a {
 }
 
 /* Header */
-.header {
+.hero-wrap {
+    display: flex;
+    flex-direction: column;
     position: relative;
-    height: 100vh;
+    height: calc(100vh - 90px);
     background-color: #e6f0ff;
 }
 
 .navbar {
     display: flex;
     align-items: center;
-    padding-top: 38px;
+    padding: 12px 0;
+}
+
+.fixed-header {
+    position: sticky;
+    top: -26px;
+    padding-top: 26px;
+    z-index: 1;
+    background-color: #e6f0ff;
 }
 
 .navbar ul {
